app/auth/gangway/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: gangway-redirect
  namespace: #@ data.values.gangway.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gangway-redirect
  namespace: #@ data.values.gangway.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  entryPoints:
  - http
  routes:
  - match: #@ "Host(`{}.{}`)".format(data.values.gangway.dns.name, data.values.domain)
    kind: Rule
    priority: 12
    services:
    - name: gangway
      port: 8080
      strategy: RoundRobin
    middlewares:
    - name: gangway-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gangway
  namespace: #@ data.values.gangway.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  entryPoints:
  - https
  routes:
  - match: #@ "Host(`{}.{}`)".format(data.values.gangway.dns.name, data.values.domain)
    kind: Rule
    priority: 12
    services:
    - name: gangway
      port: 8080
      strategy: RoundRobin
  tls:
    secretName: certificate-gangway
